[package]
name = "yolo_governance"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
ergo-lib = { version = "0.28", features = ["arbitrary"] }
ergotree-ir = "0.28"
blake2 = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
sigma-test-util = { git = "https://github.com/ergoplatform/sigma-rust", tag = "ergo-lib-v0.28.0" }
proptest = "1.0"
